@@ -1,3 +1,8 @@
+2004-05-19  Gonzalo Paniagua Javier <gonzalo@ximian.com>
+
+	* src/mod_mono.c: support for MonoApplicationsConfigFile and
+	MonoApplicationsConfigDir directives by Andrew Arnott.
+
 2004-05-14  Gonzalo Paniagua Javier <gonzalo@ximian.com>
 
 	* src/mod_mono.c: patch by Christopher McGinnis
